--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,10 +8,14 @@
     </h2>
     <div class='item-img-content'>
       <%= image_tag @item.image ,class:"item-box-img" %>
+
       <%# 商品が売れている場合は、sold outを表示しましょう %>
+      <% if @item.order != nil %>
       <div class='sold-out'>
         <span>Sold Out!!</span>
       </div>
+      <% else %>
+      <% end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
@@ -25,14 +29,15 @@
 
 
     <% if user_signed_in? %>
-      <% if current_user.id == @item.user_id  %>
+      <% if current_user.id == @item.user_id && @item.order == nil %>
       <%= link_to '商品の編集',  edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
       <p class='or-text'>or</p>
       <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
-      <% else %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
-      <%= link_to '購入画面に進む', item_orders_path(@item.id),method: :get ,class:"item-red-btn"%>
+        <%elsif @item.order == nil %>
+        <%= link_to '購入画面に進む', item_orders_path(@item.id),method: :get ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
+        <%else%>
       <% end %>
     <% end %>
 
